config/cnde-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-web
  labels:
    control-plane: dashboard-web
    role: frontend
spec:
  selector:
    matchLabels:
      control-plane: dashboard-web
      role: frontend
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: dashboard-web
        role: frontend
    spec:
      containers:
        - image: web:latest
          name: dashboard-web
          imagePullPolicy: Always
