config/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-web-oauth-proxy
  labels:
    control-plane: dashboard-web
    role: oauth
spec:
  selector:
    matchLabels:
      control-plane: dashboard-web
      role: oauth
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: dashboard-web
        role: oauth
    spec:
      containers:
        - args:
            - --cookie-domain=cnde.my-domain.com
            - --cookie-name=auth
            - --cookie-refresh=23h
            - --cookie-secure=true
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --oidc-issuer-url=https://keycloak.my-domain.com/auth/realms/cnde-web
            - --pass-access-token=true
            - --provider=oidc
            - --set-xauthrequest=true
            - --tls-cert-file=
            - --upstream=file:///dev/null
            - --ssl-insecure-skip-verify=true
          image: bitnami/oauth2-proxy:5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
