config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-api
spec:
  selector:
    control-plane: dashboard-api
    role: backend
  ports:
    - protocol: TCP
      port: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-web
spec:
  selector:
    control-plane: dashboard-web
    role: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-web-oauth-proxy
spec:
  ports:
  - name: http
    port: 4180
  selector:
    control-plane: dashboard-web
    role: oauth
