config/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: cnde-dashboard-ui
spec:
  rules:
  - host: cnde.my-domain.com
    http:
      paths:
      - backend:
          serviceName: dashboard-web
          servicePort: 80
        path: /

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: cnde-dashboard-oauth
spec:
  rules:
  - host: cnde.my-domain.com
    http:
      paths:
      - backend:
          serviceName: dashboard-web-oauth-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - cnde.my-domain.com
    secretName: cnde-dashboard-web-tls
